5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1613_1802.log
== TEST (2019-04-04 19:06:42) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=(5*D)**1/2+pi**D2/3
vidasobra= vida-dano
print(vidasobra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=(5*D)**1/2+pi**D2/3
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:07:12) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=(5*D1)**1/2+pi**D2/3
vidasobra= vida-dano
print(vidasobra)
-- OUTPUT:
-122.9630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:07:55) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=((5*D1)**1/2)+(pi**D2/3)
vidasobra= vida-dano
print(vidasobra)
-- OUTPUT:
-122.9630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:08:43) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int(((5*D1)**1/2)+(pi**D2/3))
vidasobra= vida-dano
print(vidasobra)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:24) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int([5*D1**1/2+pi**D2/3])
vidasobra= vida-dano
print(vidasobra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int([5*D1**1/2+pi**D2/3])
TypeError: int() argument must be a string, a bytes-like object or a number, not 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:51) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int(5*D1**1/2+pi**D2/3)
vidasobra= vida-dano
print(vidasobra)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:38) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int((5*D1)**(1/2)+pi**D2/3)
vidasobra= vida-dano
print(vidasobra)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:55) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int((5*D1)**(1/2)+pi**(D2/3)
vidasobra= vida-dano
print(vidasobra)
-- ERROR:
File "XXXX", line 6
    vidasobra= vida-dano
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:12) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int((5*D1)**(1/2)+pi**(D2/3))
vidasobra= vida-dano
print(vidasobra)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:15:18) 
-- CODE:
from math import*
vida=int(input("pontos de vida"))
D1=int(input("valor sorteado d1"))
D2=int(input("valor sorteasdo d2"))
dano=int((5*D1)**(1/2)+pi**(D2/3))
vidasobra= vida-dano
print(vidasobra)
-- EXECUTION TIME:
0.242161
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
